[package]
name = "iso-rust"
version = "0.1.0"
authors = ["Johan Lindfors <Johan.Lindfors@coderox.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"